# rocoknight

./: .gitignore  COMMAND_ANALYSIS.md  Cargo.toml  LICENSE  MINIMAL_FIX_PATCH.md  README.md  TOGGLE_BUG_FIX.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/rocoknight-ui-tauri/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/rocoknight-ui-tauri/src/: App.tsx  index.css
apps/rocoknight-ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/rocoknight-ui-tauri/src-tauri/src/: main.rs
apps/rocoknight-ui-tauri/src/components/ui/: button.tsx
assets/: README.md
crates/rocoknight-core/: Cargo.toml
crates/rocoknight-core/src/: cache.rs  config.rs  error.rs  lib.rs  logging.rs  process.rs  update.rs  window.rs  window_embed.rs
crates/rocoknight-plugins/: Cargo.toml
crates/rocoknight-plugins/src/: bus.rs  host_api.rs  lib.rs  loader.rs  manifest.rs  permissions.rs
docs/: DEBUG_PERFORMANCE_FIX.md  DEBUG_WINDOW.md  wpe.md
logs/: chat-history-2026-02-10.jsonl  chat-history-2026-02-10.md  main-ui-overview.md
src/: App.tsx  index.html  main.js  main.tsx  preload.js  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: PLACE_PROJECTOR_HERE.txt
src-tauri/src/: debug.rs  debug_console_layer.rs  debug_log_bus.rs  error_handling.rs  launcher.rs  login3_capture.rs  main.rs  request_context.rs  speed.rs
src-tauri/src/embed_win32/: mod.rs
src-tauri/src/projector/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/wpe/: injector.rs  interceptor.rs  mod.rs  packet.rs  windivert.rs
src/components/: GameView.tsx  LoginView.tsx  StatusBar.tsx
static/: debug.html  index.html  toolbar.html
