[package]
name = "rocoknight-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
tokio.workspace = true

# Windows-specific (guarded in code)
windows = { version = "0.56", optional = true, features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
windows-native = ["dep:windows"]

