[package]
name = "rocoknight-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

rocoknight-core = { path = "../rocoknight-core" }

