[package]
name = "rocoknight-ui-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["unstable"] }

rocoknight-core = { path = "../../../crates/rocoknight-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
