[package]
name = "rocoknight-ui-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["unstable"] }
tokio.workspace = true

rocoknight-core = { path = "../../../crates/rocoknight-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
